# data-science-gitcloud

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: .env.example
docs/: mkdocs.yml
docs/source/: index.md
docs/src/: index.md
notebooks/: Repository List.ipynb
scripts/: debug.sh  init.sh  jupyter-clean.sh  jupyterlab.sh  poetry-export.sh  printenv.sh  readthedocs.sh
src/: environment.yml  requirements-dev.txt  requirements.txt  setup.py
src/git_portfolio/: main.py
src/git_portfolio/utils/: __init__.py
src/git_portfolio/visualise/: __init__.py  views.py
src/git_portfolio/visualise/templates/: index.html
src/gitcloud_app/: __init__.py  main.py
src/gitcloud_data/: __init__.py  github.py  local.py
src/gitcloud_data/clean/: clone_url.py
src/gitcloud_data/gitlab/: gitlab.py
src/gitcloud_features/: __init__.py
src/gitcloud_models/: __init__.py
src/gitcloud_services/: __init__.py
src/gitcloud_utils/: __init__.py  config.py  logger.py  slack.py  swagger.py
src/gitcloud_visualisations/: __init__.py  views.py
src/gitcloud_visualisations/templates/: repos.html
tests/: test_git_migration.py  test_git_portfolio.py
tests/data/: test_gitlab_provider.py
tests/features/: test_local_repos.py
tests/gitcloud_app/: test_git_portfolio.py
tests/gitcloud_features/: test_profile.py
