[tool.poetry]
name = "git-portfolio"
version = "0.1.0"
description = "Manage all your Git repositories, organisations, providers from one place."
authors = ["Vikash Kothary <kothary.vikash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-swagger = "^0.2.14"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
jupyter = "^1.0.0"
jupyterlab = "^2.1.4"
PyGithub = "^1.45"
python-gitlab = "^2.0.0"
gitpython = "^3.0.5"
pandas = "^1.0.4"
python-dotenv = "^0.13.0"
toml = "^0.10.1"
mkdocs = "^1.1.2"
nbstripout = "^0.3.9"
flake8 = "^3.8.3"
flake8-html = "^0.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
