[tool.poetry]
name = "data-science-gitcloud"
version = "0.1.0"
description = "Manage all your Git repositories, organisations, providers from one place."
authors = ["Vikash Kothary <kothary.vikash@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
flake8-html = "^0.4.1"
gitpython = "^3.0.5"
google-api-python-client = "^2.33.0"
gspread = "^5.0.0"
ipywidgets = "^7.6.5"
jupyter = "^1.0.0"
jupyterlab = "^2.1.4"
mkdocs = "^1.1.2"
mkdocs-jupyter = "^0.19.0"
nbstripout = "^0.3.9"
oauth2client = "^4.1.3"
pandas = "^1.0.4"
pre-commit = "^2.16.0"
PyGithub = "^1.45"
pytest = "^4.6"
python-dotenv = "^0.13.0"
python-gitlab = "^2.0.0"
slack-sdk = "^3.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
